# DistorK

./: .gitignore  CMakeLists.txt  DistorK.filtergraph  DistorK.jucer
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BitCrusherData.cpp  BitCrusherData.h  DistorkEngine.cpp  DistorkEngine.h  SaturationData.cpp  SaturationData.h  WaveShaperData.cpp  WaveShaperData.h  clipperData.cpp  clipperData.h  kLevelMeterData.h
Source/GUI/: BitCrusher.cpp  BitCrusher.h  Clipper.cpp  Clipper.h  MasterControls.cpp  MasterControls.h  Saturation.cpp  Saturation.h  SliderWithLabels.cpp  SliderWithLabels.h  Toggle.cpp  Toggle.h  Toolbar.cpp  Toolbar.h  WaveShaper.cpp  WaveShaper.h  kLevelMeter.h  kLookAndFeel.cpp  kLookAndFeel.h  rotarySliderWithLabels.cpp  rotarySliderWithLabels.h
Source/Utility/: KitikToolbar.cpp  KitikToolbar.h  overSampleGain.cpp  overSampleGain.h
